2012-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/param.h: Include stddef.h to define NULL.

2012-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::rewinddir): Fix using
	wrong value in condition.

2012-10-30  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/cygwin.h: Add missing defines for CW_ALLOC_DRIVE_MAP,
	CW_MAP_DRIVE_MAP and CW_FREE_DRIVE_MAP.

2012-10-27  Kai Tietz  <ktietz@redhat.com>

	* dcrt0.cc (quoted): Renamed strechr to strchrnul.
	* environ.cc (environ_init): Likewise.
	* sec_acl.cc (aclfromtext32): Likewise.
	* sec_auth.cc (extract_nt_dom_user): Likewise.
	* uinfo.cc (pwdgrp::next_str): Likewise.
	* string.h (strechr): Likewise.

2012-10-26  Kai Tietz  <ktietz@redhat.com>

	* string.h (strechr): Replace assembler by
	C code.
	(ascii_strcasematch): Likewise.
	(ascii_strncasematch): Likwise.

2012-10-26  Corinna Vinschen  <corinna@vinschen.de>

	* dir.cc (closedir): Fix syscall_printf.

2012-10-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/signal.h (sigset_t): Define here.

2012-10-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* Makefile.in (DLL_IMPORTS): Use system import libraries for
	kernel32 and ntdll instead of from in-tree w32api.
	(cygwin0.dll): Remove rule dependency on DLL_IMPORTS, as they
	are no longer built in-tree.

2012-10-23  Corinna Vinschen  <corinna@vinschen.de>

	* thread.h (List_insert): Cast first parameter in
	InterlockedCompareExchangePointer call to avoid compiler warnings.
	(List_remove): Ditto.

2012-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* winbase.h: Remove.

2012-10-22  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (CURR_CHILD_INFO_MAGIC): Update.

2012-10-21  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 18.

2012-10-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Remove lloffset.